prod_snapshot_2015-09-24_1030/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Code_End_Date__c</fullName>
        <formula>IF(ISBLANK(Closed_Stamp__c),NOW(),Closed_Stamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comp_1_Address__c</fullName>
        <inlineHelpText>Enter &apos;Official&apos; Address For Audit Team (Refer to &apos;DA Comp 1&apos; field from original audit request).</inlineHelpText>
        <label>Comp 1 Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comp_1_Avg_Ad_Position__c</fullName>
        <label>Comp 1 Avg Ad Position</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_1_High__c</fullName>
        <label>Comp 1 High</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_1_Low__c</fullName>
        <label>Comp 1 Low</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_1_Of_Advertisers__c</fullName>
        <label>Comp 1 # Of Advertisers</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_2_Address__c</fullName>
        <inlineHelpText>Enter &apos;Official&apos; Address For Audit Team (Refer to &apos;DA Comp 2&apos; field from original audit request).</inlineHelpText>
        <label>Comp 2 Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comp_2_Avg_Ad_Position__c</fullName>
        <label>Comp 2 Avg Ad Position</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_2_High__c</fullName>
        <label>Comp 2 High</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_2_Low__c</fullName>
        <label>Comp 2 Low</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_2_Of_Advertisers__c</fullName>
        <label>Comp 2 # Of Advertisers</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_3_Address__c</fullName>
        <inlineHelpText>Enter &apos;Official&apos; Address For Audit Team (Refer to &apos;DA Comp 3&apos; field from original audit request).</inlineHelpText>
        <label>Comp 3 Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comp_3_Avg_Ad_Position__c</fullName>
        <label>Comp 3 Avg Ad Position</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_3_High__c</fullName>
        <label>Comp 3 High</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_3_Low__c</fullName>
        <label>Comp 3 Low</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_3_Of_Advertisers__c</fullName>
        <label>Comp 3 # Of Advertisers</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Text__c</fullName>
        <formula>Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Count_PRC_Communication__c</fullName>
        <formula>IF( TEXT(Root_Cause_Primary__c) = &quot;Communication&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count - PRC Communication</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_PRC_Quality__c</fullName>
        <formula>IF( TEXT(Root_Cause_Primary__c) = &quot;Quality&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count - PRC Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_PRC_Timeliness__c</fullName>
        <formula>IF( TEXT(Root_Cause_Primary__c) = &quot;Timeliness&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count - PRC Timeliness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Avg_Cust_Value__c</fullName>
        <inlineHelpText>What is the average customer value?</inlineHelpText>
        <label>DA Avg Cust Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Best_Medium__c</fullName>
        <inlineHelpText>What medium works best and why?</inlineHelpText>
        <label>DA Best Medium</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DA_Budget_Range__c</fullName>
        <inlineHelpText>Monthly Digital Budget Range</inlineHelpText>
        <label>DA Budget Range</label>
        <picklist>
            <picklistValues>
                <fullName>$500-$1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,000-$1,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$1,500$-2,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,000-$2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2,500-$3,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3,000-$3,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3,500-$4,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$4,000-$4,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$4,500-$5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000-$7,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$7,500 - $15,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$15,000+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_AvgRating__c</fullName>
        <label>Found on Yelp</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_Bing__c</fullName>
        <label>Average Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_CompletePerc__c</fullName>
        <label>Listings Found w/ Errors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_Consistency__c</fullName>
        <label>Found on Bing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_DupListings__c</fullName>
        <label>Found on Yahoo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_EmDemo1Vol__c</fullName>
        <label>FB Demo 1 Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_EmDemo1__c</fullName>
        <label>Demo 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_EmDemo2Vol__c</fullName>
        <label>FB Demo 2 Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_EmDemo2__c</fullName>
        <label>Demo 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_EmDemo3Vol__c</fullName>
        <label>FB Demo 3 Volume</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_EmDemo3__c</fullName>
        <label>Demo 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_GooglePlus__c</fullName>
        <label># of Reviews</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_PPCEstSearch__c</fullName>
        <label>Client Estimated Search</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_PPCEstSpend__c</fullName>
        <label>Client Estimated Monthly Spend</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_PPCEstVisits__c</fullName>
        <label>Client Estimated Monthly Visitors</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_Reviews__c</fullName>
        <label>Listings Not Found</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_SocialFBFans__c</fullName>
        <label>Client Facebook Fans</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_SocialFBTalkingAbout__c</fullName>
        <label>Client Talking About</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_SocialGooglePlusFollowers__c</fullName>
        <label>Client Google+ Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_SocialGooglePlusViews__c</fullName>
        <label># of Mentions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_SocialTwitterFollowers__c</fullName>
        <label>Client Twitter Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_SocialTwitterFollowing__c</fullName>
        <label>Client Twitter Following</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_SocialTwitterTweets__c</fullName>
        <label>Client Twitter Tweets</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_ClientInfo_Yahoo__c</fullName>
        <label># of Accurate Listings</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_AvgCPC__c</fullName>
        <label>Comp 1 # of Traffic from Ads</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_CompletePerc__c</fullName>
        <label>Comp 1 Completeness %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_EstMoSpend__c</fullName>
        <label>Comp 1 Est Monthly Spend</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_EstMoVisitors__c</fullName>
        <label>Comp 1 # of Keywords</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_KW1GRank__c</fullName>
        <label>Comp 1 KW 1 G Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_KW2GRank__c</fullName>
        <label>Comp 1 KW 2 G Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_KW3GRank__c</fullName>
        <label>Comp 1 KW 3 G Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_SocialFBFans__c</fullName>
        <label>Comp 1 Facebook Fans</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_SocialFBTalkingAbout__c</fullName>
        <label>Comp 1 Talking About</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_SocialGooglePlus__c</fullName>
        <label>Comp 1 Google+</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_SocialTwitterFollowers__c</fullName>
        <label>Comp 1 Twitter Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp1_SocialTwitterFollowing__c</fullName>
        <label>Comp 1 Following</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_AvgCPC__c</fullName>
        <label>Comp 2 # of Traffic from Ads</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_CompletePerc__c</fullName>
        <label>Comp 2 Completeness %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_EstMoSpend__c</fullName>
        <label>Comp 2 Est Monthly Spend</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_EstMoVisitors__c</fullName>
        <label>Comp 2 # of Keywords</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_SocialFBFans__c</fullName>
        <label>Comp 2 Facebook Fans</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_SocialFBTalkingAbout__c</fullName>
        <label>Comp 2 Talking About</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_SocialGooglePlus__c</fullName>
        <label>Comp 2 Google+</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_SocialTwitterFollowers__c</fullName>
        <label>Comp 2 Twitter Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp2_SocialTwitterFollowing__c</fullName>
        <label>Comp 2 Following</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_AvgCPC__c</fullName>
        <label>Comp 3 # of Traffic from Ads</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_CompletePerc__c</fullName>
        <label>Comp 3 Completeness %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_EstMoSpend__c</fullName>
        <label>Comp 3 Est Monthly Spend</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_EstMoVisitors__c</fullName>
        <label>Comp 3 # of Keywords</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_SocialFBFans__c</fullName>
        <label>Comp 3 Facebook Fans</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_SocialFBTalkingAbout__c</fullName>
        <label>Comp 3 Talking About</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_SocialGooglePlus__c</fullName>
        <label>Comp 3 Google+</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_SocialTwitterFollowers__c</fullName>
        <label>Comp 3 Twitter Followers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp3_SocialTwitterFollowing__c</fullName>
        <label>Comp 3 Following</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Comp_1__c</fullName>
        <inlineHelpText>What are the client&apos;s top three competitors&apos; Website URLs?</inlineHelpText>
        <label>Competitor 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Comp_2__c</fullName>
        <inlineHelpText>What are the client&apos;s top three competitors&apos; Website URLs?</inlineHelpText>
        <label>Competitor 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Comp_3__c</fullName>
        <inlineHelpText>What are the client&apos;s top three competitors&apos; Website URLs?</inlineHelpText>
        <label>Competitor 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Current_Adv__c</fullName>
        <inlineHelpText>What is their current advertising?</inlineHelpText>
        <label>DA Current Adv</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupons/Specials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Deals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay-Per-Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DA_Expected_Prod_Mix__c</fullName>
        <label>DA Expected Prod Mix</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DA_General_Notes__c</fullName>
        <label>DA General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DA_Geog_Serv_Area__c</fullName>
        <inlineHelpText>Geographical Area - Include City and Service Radius In Miles</inlineHelpText>
        <label>DA Geog Serv Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_LeadDefinition__c</fullName>
        <label>Lead Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_List_Products_Services__c</fullName>
        <inlineHelpText>Which products/services do they sell the most of?</inlineHelpText>
        <label>DA List Products/Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Meta_BacklinksDetails__c</fullName>
        <label>Backlinks Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Meta_BacklinksRating__c</fullName>
        <label>Backlinks Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Meta_DomainCreateDate__c</fullName>
        <label>Domain Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DA_Meta_DomainExpireDate__c</fullName>
        <label>Domain Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DA_Meta_EmailCapture__c</fullName>
        <label>Client email capture form on website?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Meta_HomePage_Details__c</fullName>
        <label>Home Page Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Meta_HomePage_Rating__c</fullName>
        <label>Home Page Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Bad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Meta_IndexedPagesDetails__c</fullName>
        <label>Indexed Pages Details</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Meta_IndexedPagesRating__c</fullName>
        <label>Indexed Pages Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Misaligned_Product_Description__c</fullName>
        <label>DA Misaligned Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Misaligned_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Misaligned Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW10__c</fullName>
        <label>Organic Keyword 10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW1_GLRank__c</fullName>
        <label>Organic Keyword 1 GL Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW1_GRank__c</fullName>
        <label>Organic Keyword 1 G Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW1__c</fullName>
        <label>Organic Keyword 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW2_GLRank__c</fullName>
        <label>Organic Keyword 2 GL Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW2_GRank__c</fullName>
        <label>Organic Keyword 2 G Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW2__c</fullName>
        <label>Organic Keyword 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW3_GLRank__c</fullName>
        <label>Organic Keyword 3 GL Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_OrgKW3_GRank__c</fullName>
        <label>Organic Keyword 3 G Ranking</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_PPCKW1__c</fullName>
        <label>PPC Keyword 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_PPCKW2__c</fullName>
        <label>PPC Keyword 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_PPCKW3__c</fullName>
        <label>PPC Keyword 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_PPC_CPC1__c</fullName>
        <label>CPC 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_PPC_CPC2__c</fullName>
        <label>CPC 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_PPC_CPC3__c</fullName>
        <label>CPC 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_PPC_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DA PPC Specialist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DA_Select_New_Products__c</fullName>
        <inlineHelpText>Are there any specific products that you NEED to have? If not, please leave blank and your Jumpstart Specialist will evaluate the best needs for your client.</inlineHelpText>
        <label>DA Select New Products</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (List In Other Products Line)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DA_Select_Other_Products__c</fullName>
        <label>DA Select Other Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DA_Website__c</fullName>
        <description>Digital Audit Website</description>
        <inlineHelpText>Enter Website In Format (www.website.com)</inlineHelpText>
        <label>DA Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DA_Win_1__c</fullName>
        <inlineHelpText>DA Lead Def 1</inlineHelpText>
        <label>DA Lead Def 1</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Win_2__c</fullName>
        <inlineHelpText>DA Lead Def 2</inlineHelpText>
        <label>DA Lead Def 2</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_Of_Week_Created__c</fullName>
        <description>Day of week, 2-6, that a case is created.  Anything created on 7 or 1 (Sat or Sun) is marked as Monday.</description>
        <formula>IF(OR(MOD( DATEVALUE(CreatedDate) - DATE(2000,1,2),7)=6,MOD( DATEVALUE(CreatedDate) - DATE(2000,1,2),7) =7),1,MOD( DATEVALUE(CreatedDate) - DATE(2000,1,2),7) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Of Week Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DealID__c</fullName>
        <label>DealID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_Product_Value__c</fullName>
        <formula>IF(AND(ISPICKVAL(Opportunity__r.StageName,&quot;Closed Won&quot;), 
OR(ISPICKVAL(Opportunity__r.Paused_Or_Canceled__c,&quot;Fulfilled&quot;), 
ISPICKVAL(Opportunity__r.Paused_Or_Canceled__c,&quot;&quot;))),Opportunity__r.Product_Total__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivered Product Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dev_Admin_Comments__c</fullName>
        <description>Comments about the ticket from the Administrator</description>
        <label>Admin Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Affl_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Lookup for Affiliated Sales Rep</description>
        <label>Affiliated Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Affiliated Sales Rep)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>